set(PUREDARWIN_BUSYBOX_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/upstream")
set(PUREDARWIN_BUSYBOX_BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}/build")
set(PUREDARWIN_BUSYBOX_CONFIG "${CMAKE_CURRENT_SOURCE_DIR}/busybox-minimal.config")
set(PUREDARWIN_BUSYBOX_APPLY_CONFIG "${CMAKE_CURRENT_SOURCE_DIR}/apply-minimal-config.cmake")
set(PUREDARWIN_BUSYBOX_FINALIZE_CONFIG "${CMAKE_CURRENT_SOURCE_DIR}/finalize-config.sh")
set(PUREDARWIN_BUSYBOX_BIN "${PUREDARWIN_BUSYBOX_BUILD_DIR}/busybox")
find_program(PUREDARWIN_MAKE_PROGRAM NAMES gmake make REQUIRED)

set(PUREDARWIN_BUSYBOX_LINKER_FLAG "")
if(PUREDARWIN_NIX_TOOLCHAIN AND DEFINED ENV{NIX_NATIVE_LD_PATH})
    set(PUREDARWIN_BUSYBOX_LINKER_FLAG "-fuse-ld=$ENV{NIX_NATIVE_LD_PATH}")
endif()

file(GLOB_RECURSE PUREDARWIN_BUSYBOX_SOURCES CONFIGURE_DEPENDS
    "${PUREDARWIN_BUSYBOX_SOURCE_DIR}/*.c"
    "${PUREDARWIN_BUSYBOX_SOURCE_DIR}/*.h"
    "${PUREDARWIN_BUSYBOX_SOURCE_DIR}/*.S"
    "${PUREDARWIN_BUSYBOX_SOURCE_DIR}/*.s"
)

add_custom_command(
    OUTPUT "${PUREDARWIN_BUSYBOX_BUILD_DIR}/.config"
    COMMAND "${CMAKE_COMMAND}" -E make_directory "${PUREDARWIN_BUSYBOX_BUILD_DIR}"
    COMMAND "${CMAKE_COMMAND}" -E copy_if_different
        "${PUREDARWIN_BUSYBOX_SOURCE_DIR}/scripts/kconfig/zconf.tab.c_shipped"
        "${PUREDARWIN_BUSYBOX_SOURCE_DIR}/scripts/kconfig/zconf.tab.c"
    COMMAND "${CMAKE_COMMAND}" -E copy_if_different
        "${PUREDARWIN_BUSYBOX_SOURCE_DIR}/scripts/kconfig/lex.zconf.c_shipped"
        "${PUREDARWIN_BUSYBOX_SOURCE_DIR}/scripts/kconfig/lex.zconf.c"
    COMMAND "${CMAKE_COMMAND}" -E copy_if_different
        "${PUREDARWIN_BUSYBOX_SOURCE_DIR}/scripts/kconfig/zconf.hash.c_shipped"
        "${PUREDARWIN_BUSYBOX_SOURCE_DIR}/scripts/kconfig/zconf.hash.c"
    COMMAND "${CMAKE_COMMAND}" -E env
        "KCONFIG_ALLCONFIG=${PUREDARWIN_BUSYBOX_CONFIG}"
        "${PUREDARWIN_MAKE_PROGRAM}" -C "${PUREDARWIN_BUSYBOX_SOURCE_DIR}" O="${PUREDARWIN_BUSYBOX_BUILD_DIR}" allnoconfig
    COMMAND "${CMAKE_COMMAND}" -D "BUSYBOX_CONFIG=${PUREDARWIN_BUSYBOX_BUILD_DIR}/.config" -P "${PUREDARWIN_BUSYBOX_APPLY_CONFIG}"
    COMMAND "${PUREDARWIN_BUSYBOX_FINALIZE_CONFIG}"
        "${PUREDARWIN_MAKE_PROGRAM}"
        "${PUREDARWIN_BUSYBOX_SOURCE_DIR}"
        "${PUREDARWIN_BUSYBOX_BUILD_DIR}"
    DEPENDS
        "${PUREDARWIN_BUSYBOX_CONFIG}"
        "${PUREDARWIN_BUSYBOX_APPLY_CONFIG}"
        "${PUREDARWIN_BUSYBOX_FINALIZE_CONFIG}"
    VERBATIM
)

add_custom_command(
    OUTPUT "${PUREDARWIN_BUSYBOX_BIN}"
    COMMAND "${PUREDARWIN_MAKE_PROGRAM}"
        -C "${PUREDARWIN_BUSYBOX_SOURCE_DIR}"
        O="${PUREDARWIN_BUSYBOX_BUILD_DIR}"
        CC=${CMAKE_C_COMPILER}
        HOSTCC=cc
        CFLAGS=-fno-stack-protector
        LD=${CMAKE_C_COMPILER}\ ${PUREDARWIN_BUSYBOX_LINKER_FLAG}
        AR=${CMAKE_AR}
        RANLIB=${CMAKE_RANLIB}
        NM=${CMAKE_NM}
        LDFLAGS=${PUREDARWIN_BUSYBOX_LINKER_FLAG}\ -Wl,-L,$<TARGET_FILE_DIR:libSystem_B_stub>\ -Wl,-dylib_file,/usr/lib/system/libdyld.dylib:$<TARGET_FILE:libdyld>\ -Wl,-dylinker_install_name,/usr/lib/dyld\ -Wl,-platform_version,macos,11.0,11.5\ -Wl,-fixup_chains\ -Wl,-lSystem
        LDLIBS=
        SKIP_STRIP=y
        busybox
    DEPENDS
        "${PUREDARWIN_BUSYBOX_BUILD_DIR}/.config"
        "$<TARGET_FILE:libSystem_B_stub>"
        "$<TARGET_FILE:dyld>"
        ${PUREDARWIN_BUSYBOX_SOURCES}
    VERBATIM
)

add_custom_target(busybox ALL DEPENDS "${PUREDARWIN_BUSYBOX_BIN}")
add_dependencies(busybox libSystem_B_stub dyld)

install(PROGRAMS "${PUREDARWIN_BUSYBOX_BIN}" DESTINATION bin COMPONENT BaseSystem)
